Added licence and description to Cargo.toml.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "ether"
 version = "0.1.0"
 authors = ["Julian Schmid <info@julianschmid.name>"]
+description = "A library for parsing ethernet & ethernet using protocols."
+keywords = ["EthernetII", "IPv4", "IPv6"]
+license = "BSD-3-Clause"
 
 [dependencies]
 byteorder = "*"
