Added support for IEEE_802.1Q VLAN tagging headers & value checks in write functions are now executed before writing is started (+ unit test to check this).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.2"
 authors = ["Julian Schmid <info@julianschmid.name>"]
 repository = "https://github.com/JulianSchmid/etherparse"
 description = "A library for parsing ethernet & ethernet using protocols."
-keywords = ["EthernetII", "IPv4", "IPv6"]
+keywords = ["ethernet", "ipv4", "ipv6"]
 license = "BSD-3-Clause"
 readme = "README.md"
 exclude = [
