--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "etherparse"
 version = "0.1.4"
 authors = ["Julian Schmid <info@julianschmid.name>"]
 repository = "https://github.com/JulianSchmid/etherparse"
-description = "A library for parsing ethernet & ethernet using protocols."
+description = "A library for parsing & writing a bunch of packet based protocols (EthernetII, IPv4, IPv6, UDP ...)."
 keywords = ["ethernet", "ipv4", "ipv6"]
 license = "BSD-3-Clause"
 readme = "README.md"
