--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.4"
 authors = ["Julian Schmid <info@julianschmid.name>"]
 repository = "https://github.com/JulianSchmid/etherparse"
 description = "A library for parsing & writing a bunch of packet based protocols (EthernetII, IPv4, IPv6, UDP ...)."
-keywords = ["ethernet", "ipv4", "ipv6"]
+keywords = ["ethernet", "ipv4", "ipv6", "IEEE 802.1Q", "vlan", "udp"]
 license = "BSD-3-Clause"
 readme = "README.md"
 exclude = [
