Added codecov badge to Cargo.toml & Readme.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ byteorder = "1.2.1"
 
 [badges]
 travis-ci = { repository = "JulianSchmid/etherparse", branch = "master" }
+codecov = { repository = "JulianSchmid/etherparse", branch = "master", service = "github" }
