Added unit tests for coverage and replaced match exporessions in tests with assert_matches.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ exclude = [
 [dependencies]
 byteorder = "1.2.1"
 
+[dev-dependencies]
+assert_matches = "1.2"
+
 [badges]
 travis-ci = { repository = "JulianSchmid/etherparse", branch = "master" }
 codecov = { repository = "JulianSchmid/etherparse", branch = "master", service = "github" }
