--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ addons:
       - gcc
       - binutils-dev
       - libiberty-dev
+before_install:
+  - sudo apt-get install -y build-essential
 
 after_success: |
   wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
