--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,16 @@ exclude = [
 
 [dependencies]
 byteorder = "1.2.1"
+proptest = { version = "0.7.1", optional = true }
 
 [dev-dependencies]
 assert_matches = "1.2"
 proptest = "0.7.1"
+
+[dev-dependencies.etherparse]
+path = "."
+version = "*"
+features = ["proptest"]
 
 [badges]
 travis-ci = { repository = "JulianSchmid/etherparse", branch = "master" }
