--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ proptest = "0.7.1"
 
 [dev-dependencies.etherparse]
 path = "."
-version = "0.4.0"
+version = "^0.3.1"
 features = ["proptest"]
 
 [badges]
