--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "etherparse"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["Julian Schmid <info@julianschmid.name>"]
 repository = "https://github.com/JulianSchmid/etherparse"
 description = "A library for parsing & writing a bunch of packet based protocols (EthernetII, IPv4, IPv6, UDP ...)."
+categories = ["network-programming", "parser-implementations"]
 keywords = ["ethernet", "ipv4", "ipv6", "vlan", "udp"]
 license = "BSD-3-Clause"
 readme = "README.md"
