Fixed syntax error in Cargo.toml.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Julian Schmid <info@julianschmid.name>"]
 repository = "https://github.com/JulianSchmid/etherparse"
 description = "A library for parsing & writing a bunch of packet based protocols (EthernetII, IPv4, IPv6, UDP, TCP ...)."
 categories = ["network-programming", "parser-implementations"]
-keywords = [ipv4", "ipv6", "vlan", "udp", "tcp"]
+keywords = ["ipv4", "ipv6", "vlan", "udp", "tcp"]
 license = "BSD-3-Clause"
 readme = "README.md"
 exclude = [
