--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,12 @@ exclude = [
     "appveyor.yml"
 ]
 
+[features]
+ip_number_num_enum = ["num_enum"]
+default = []
+
 [dependencies]
+num_enum = { version = "0.5", optional = true }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
