--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,13 @@ exclude = [
 
 [features]
 ip_number_num_enum = ["num_enum"]
+ip_number_strum_iter = ["strum", "strum_macros"]
 default = []
 
 [dependencies]
 num_enum = { version = "0.5", optional = true }
+strum_macros = { version = "0.24", optional = true }
+strum = { version = "0.24", optional = true }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
