--- a/appveyor.yml
+++ b/appveyor.yml
@@ -118,4 +118,4 @@ build: false
 #directly or perform other testing commands. Rust will automatically be placed in the PATH
 # environment variable.
 test_script:
-  - cargo test --features ip_number_num_enum --verbose %cargoflags%
+  - cargo test --features ip_number_num_enum ip_number_strum_iter --verbose %cargoflags%
