--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,8 +38,8 @@ environment:
 ### MSVC Toolchains ###
 
   # Stable 64-bit MSVC
-    - channel: stable
-      target: x86_64-pc-windows-msvc
+  #  - channel: stable
+  #    target: x86_64-pc-windows-msvc
   # Stable 32-bit MSVC
     - channel: stable
       target: i686-pc-windows-msvc
@@ -61,17 +61,17 @@ environment:
 ### GNU Toolchains ###
 
   # Stable 64-bit GNU
-    - channel: stable
-      target: x86_64-pc-windows-gnu
+  #  - channel: stable
+  #    target: x86_64-pc-windows-gnu
   # Stable 32-bit GNU
     - channel: stable
       target: i686-pc-windows-gnu
   # Beta 64-bit GNU
-    - channel: beta
-      target: x86_64-pc-windows-gnu
+  #  - channel: beta
+  #    target: x86_64-pc-windows-gnu
   # Beta 32-bit GNU
-    - channel: beta
-      target: i686-pc-windows-gnu
+  #  - channel: beta
+  #    target: i686-pc-windows-gnu
   # Nightly 64-bit GNU
   #  - channel: nightly
   #    target: x86_64-pc-windows-gnu
@@ -118,4 +118,5 @@ build: false
 #directly or perform other testing commands. Rust will automatically be placed in the PATH
 # environment variable.
 test_script:
+  - cargo build --verbose %cargoflags%
   - cargo test --verbose %cargoflags%
