--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ exclude = [
 
 [dependencies]
 arrayvec = "0.7.2"
+serde = { version = "1.0", optional = true, features = ["derive"] }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
