--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,10 @@
 # Rust needs at least Visual Studio 2013 Appveyor OS for MSVC targets.
 os: Visual Studio 2015
 
+branches:
+  only:
+    - master
+
 ## Build Matrix ##
 
 # This configuration will setup a build for each channel & target combination (12 windows
