Ipv4Header payload_len to total_len

--- a/etherparse/Cargo.toml
+++ b/etherparse/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Julian Schmid <info@julianschmid.name>"]
 edition = "2021"
 repository = "https://github.com/JulianSchmid/etherparse"
 description = "A library for parsing & writing a bunch of packet based protocols (EthernetII, IPv4, IPv6, UDP, TCP ...)."
-categories = ["network-programming", "parser-implementations"]
+categories = ["network-programming", "parser-implementations", "no-std", "no-std::no-alloc"]
 keywords = ["ipv4", "ipv6", "vlan", "udp", "tcp"]
 license = "MIT OR Apache-2.0"
 readme = "../README.md"
