--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,7 +28,8 @@ jobs:
       run: coverage/coverage.bash
       shell: bash
     - name: Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
         files: target/coverage/export.lcov.txt
         fail_ci_if_error: true
+        token: ${{ secrets.CODECOV_TOKEN }}
