--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -14,12 +14,11 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions-rs/toolchain@v1
       with:
-        toolchain: nightly
+        toolchain: stable
         override: true
         components: llvm-tools-preview
     - uses: actions-rs/cargo@v1
       with:
-        toolchain: nightly
         command: install
         args: cargo-binutils rustfilt
     - name: Install jq
