--- a/etherparse/Cargo.toml
+++ b/etherparse/Cargo.toml
@@ -20,10 +20,13 @@ exclude = [
 
 [features]
 default = ["std"]
-std = ["arrayvec/std"]
+std = []
+serde = ["dep:serde", "dep:serde_arrays"]
 
 [dependencies]
 arrayvec = { version = "0.7.2", default-features = false }
+serde = { version = "1.0", optional = true, features = ["derive"] }
+serde_arrays = { version = "0.1", optional = true }
 
 [dev-dependencies]
 proptest = "1.4.0"
