--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -130,3 +130,10 @@ jobs:
         target: x86_64-unknown-none
         override: true
     - run: cargo build --target x86_64-unknown-none
+
+  msrv:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: taiki-e/install-action@cargo-hack
+    - run: cargo hack check --rust-version --workspace --all-targets --ignore-private
