Add rust-version = "1.83.0" to proptest gen crate

--- a/etherparse_proptest_generators/Cargo.toml
+++ b/etherparse_proptest_generators/Cargo.toml
@@ -17,6 +17,7 @@ exclude = [
     ".travis/*",
     "appveyor.yml"
 ]
+rust-version = "1.83.0"
 
 [dependencies]
 etherparse = { path = "../etherparse" }
